Sizing improvements: no autohide when not on screen edge (Eduard Rocatelli), always keep inside the screen, keep centered or to the edge when size changes, e.g when changing settings or adding/rmoving items. All xinerama aware.
(Old svn revision: 3866)

--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,18 @@
+Noteworthy updates to the xfce4 panel should be recorded here.
+
+* 2003-09-30  Jasper Huijsmans <huysmans@users.sourceforge.net>
+
+Fix crash when config file is corrupted. Still no clue about why the
+corruption occurs in the first place :( 
+
+* 2003-09-14  Jasper Huijsmans <huysmans@users.sourceforge.net>
+
+Documentation updated to new default configuration and other improvements.
+
+* 2003-08-07  Jasper Huijsmans <huysmans@users.sourceforge.net>
+
+Important i18n fix in xfce_support.c. Dialogs are now properly translated.
+
 * 2003-07-25  Jasper Huijsmans <huysmans@users.sourceforge.net>
 
 Improved autohide handling and reorientation.
