--- a/po/sv.po
+++ b/po/sv.po
@@ -7,113 +7,117 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
-"POT-Creation-Date: 2003-10-17 08:23+0200\n"
+"POT-Creation-Date: 2003-09-22 21:31+0200\n"
 "PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
-msgstr ""
+msgstr "Välj fil"
 
 #: panel/controls_dialog.c:254
 msgid "Change item"
-msgstr ""
+msgstr "Ändra objekt"
 
 #: panel/controls_dialog.c:286 panel/item_dialog.c:647
 msgid "Position:"
 msgstr ""
 
-#: panel/controls_dialog.c:342 panel/controls.c:272
+#: panel/controls_dialog.c:331 panel/controls.c:272
 msgid ""
 "Removing an item will also remove its popup menu.\n"
 "\n"
 "Do you want to remove the item?"
 msgstr ""
+"Att ta bort ett objekt kommer även att ta bort dess popup-meny.\n"
+"\n"
+"Vill du ta bort objektet?"
+
 
 #: panel/item_dialog.c:320
 msgid "Other Icon"
-msgstr ""
+msgstr "Annan ikon"
 
 #: panel/item_dialog.c:345
 msgid "Select icon"
-msgstr ""
+msgstr "Välj ikon"
 
 #: panel/item_dialog.c:384
 msgid "Icon:"
-msgstr ""
+msgstr "Ikon:"
 
 #: panel/item_dialog.c:433
 msgid "Select command"
-msgstr ""
+msgstr "Välj kommando"
 
 #: panel/item_dialog.c:461
 msgid "Command:"
-msgstr ""
+msgstr "Kommando:"
 
 #: panel/item_dialog.c:498 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr ""
+msgstr "Kör i _terminal"
 
 #: panel/item_dialog.c:503 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr ""
+msgstr "Använd start_notifikation"
 
 #: panel/item_dialog.c:530
 msgid "Caption:"
-msgstr ""
+msgstr "Titel:"
 
 #: panel/item_dialog.c:563
 msgid "Tooltip:"
-msgstr ""
+msgstr "Hjälptext:"
 
 #: panel/item_dialog.c:599
 msgid "Menu:"
-msgstr ""
+msgstr "Meny:"
 
 #: panel/item_dialog.c:606
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Anslut meny till programstartare"
 
-#: panel/item_dialog.c:739
+#: panel/item_dialog.c:738
 msgid "Icon Preview"
-msgstr ""
+msgstr "Förhandsvisning av ikon"
 
-#: panel/item_dialog.c:743
+#: panel/item_dialog.c:742
 msgid "Drag file onto this frame to change the icon"
-msgstr ""
+msgstr "Drag en fil till denna ram för att ändra ikon"
 
-#: panel/item_dialog.c:931
+#: panel/item_dialog.c:930
 msgid "Change menu item"
-msgstr ""
+msgstr "Ändra menyobjekt"
 
 #. add buttons
-#: panel/item_dialog.c:934
+#: panel/item_dialog.c:933
 msgid "Remove"
-msgstr ""
+msgstr "Ta bort"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr ""
+msgstr "Musknapp 3 för att ändra objektet"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr ""
+msgstr "Lägg till objekt"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr ""
+msgstr "Lägg till nytt objekt"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr ""
+msgstr "Programstartare"
 
 #: panel/main.c:132
 msgid "Are you sure you want to exit?"
-msgstr ""
+msgstr "Är du säker på att du vill avsluta?"
 
 #: panel/main.c:268
 #, c-format
@@ -122,6 +126,9 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
+"%s, version %s\n"
+"Del av skrivbordsmiljön XFce\n"
+"http://www.xfce.org\n"
 
 #: panel/main.c:284
 msgid ""
@@ -129,75 +136,78 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
+"din fönsterhanterare verkar inte stödja de nya fönsterhanterarledtrådarna såsom"
+"definierade på http://www.freedesktop.org. \n"
+"Detta kan begränsa XFce:s avsedda funktionalitet."
 
-#: panel/controls.c:320 panel/panel.c:226
+#: panel/controls.c:320 panel/panel.c:123
 msgid "/Add _new item"
-msgstr ""
+msgstr "/_Nytt objekt"
 
-#: panel/controls.c:322 panel/panel.c:228
+#: panel/controls.c:322 panel/panel.c:125
 msgid "/_Properties..."
-msgstr ""
+msgstr "/_Egenskaper..."
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr ""
+msgstr "/_Ta bort"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr ""
+msgstr "Detta objekt saknar konfigurationsalternativ"
 
-#: panel/panel.c:224
+#: panel/panel.c:121
 msgid "/XFce Panel"
-msgstr ""
+msgstr "/XFce-panelen"
 
-#: panel/panel.c:229
+#: panel/panel.c:126
 msgid "/_Settings manager"
-msgstr ""
+msgstr "/_Inställningshanterare"
 
-#: panel/panel.c:231
+#: panel/panel.c:128
 msgid "/_About XFce"
-msgstr ""
+msgstr "/_Om XFce"
 
-#: panel/panel.c:232
+#: panel/panel.c:129
 msgid "/_Help"
-msgstr ""
+msgstr "/_Hjälp"
 
-#: panel/panel.c:234
+#: panel/panel.c:131
 msgid "/_Lock screen"
-msgstr ""
+msgstr "/_Lås skärmen"
 
-#: panel/panel.c:235
+#: panel/panel.c:132
 msgid "/E_xit"
-msgstr ""
+msgstr "/_Avsluta"
 
-#: panel/panel.c:648 settings/xfce_settings_plugin.c:82
+#: panel/panel.c:489 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr ""
+msgstr "XFce-panelen"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr ""
+msgstr "Allmän"
 
 #: panel/icons.c:74
 msgid "Editor"
-msgstr ""
+msgstr "Texteditor"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr ""
+msgstr "Filhantering"
 
 #: panel/icons.c:76
 msgid "Utilities"
-msgstr ""
+msgstr "Verktyg"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr ""
+msgstr "Spel"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr ""
+msgstr "Hjälpläsare"
 
 #: panel/icons.c:79
 msgid "Multimedia"
@@ -205,23 +215,23 @@ msgstr ""
 
 #: panel/icons.c:80
 msgid "Network"
-msgstr ""
+msgstr "Nätverk"
 
 #: panel/icons.c:81
 msgid "Graphics"
-msgstr ""
+msgstr "Grafik"
 
 #: panel/icons.c:82
 msgid "Printer"
-msgstr ""
+msgstr "Skrivare"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr ""
+msgstr "Produktivitet"
 
 #: panel/icons.c:84
 msgid "Sound"
-msgstr ""
+msgstr "Ljud"
 
 #: panel/icons.c:85
 msgid "Terminal"
@@ -229,19 +239,19 @@ msgstr ""
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr ""
+msgstr "Inställningshanterare inte tillgänglig"
 
 #: panel/popup.c:263
 msgid "Menu"
-msgstr ""
+msgstr "Meny"
 
 #: settings/xfce_settings_dialog.c:119
 msgid "Tiny"
-msgstr ""
+msgstr "Minimal"
 
 #: settings/xfce_settings_dialog.c:123
 msgid "Small"
-msgstr ""
+msgstr "Liten"
 
 #: settings/xfce_settings_dialog.c:127
 msgid "Medium"
@@ -249,78 +259,78 @@ msgstr ""
 
 #: settings/xfce_settings_dialog.c:131
 msgid "Large"
-msgstr ""
+msgstr "Stor"
 
 #: settings/xfce_settings_dialog.c:190
 msgid "Horizontal"
-msgstr ""
+msgstr "Horisontell"
 
 #: settings/xfce_settings_dialog.c:194
 msgid "Vertical"
-msgstr ""
+msgstr "Vertikal"
 
 #: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:456
 msgid "Left"
-msgstr ""
+msgstr "Vänster"
 
 #: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:457
 msgid "Right"
-msgstr ""
+msgstr "Höger"
 
 #: settings/xfce_settings_dialog.c:234 settings/xfce_settings_dialog.c:455
 #: settings/xfce_settings_dialog.c:511
 msgid "Top"
-msgstr ""
+msgstr "Överst"
 
 #: settings/xfce_settings_dialog.c:238 settings/xfce_settings_dialog.c:454
 #: settings/xfce_settings_dialog.c:519
 msgid "Bottom"
-msgstr ""
+msgstr "Underst"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr ""
+msgstr "Panelstorlek:"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr ""
+msgstr "Panelorientering:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
-msgstr ""
+msgstr "Popupposition:"
 
 #: settings/xfce_settings_dialog.c:424
 msgid "Icon theme:"
-msgstr ""
+msgstr "Ikontema:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr ""
+msgstr "Panellager:"
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
-msgstr ""
+msgstr "Normalt"
 
 #: settings/xfce_settings_dialog.c:535
 msgid "Center the panel:"
-msgstr ""
+msgstr "Centrera panelen:"
 
 #: settings/xfce_settings_dialog.c:559
 msgid "Set"
-msgstr ""
+msgstr "Sätt"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr ""
+msgstr "Autogöm:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr ""
+msgstr "XFce panelinställningar"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
 msgid "Appearance"
-msgstr ""
+msgstr "Utseende"
 
 #. Position
 #: settings/xfce_settings_dialog.c:696
@@ -330,47 +340,47 @@ msgstr ""
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr ""
+msgstr "Beteende"
 
 #: plugins/clock/clock.c:57
 msgid "Sunday"
-msgstr ""
+msgstr "Söndag"
 
 #: plugins/clock/clock.c:58
 msgid "Monday"
-msgstr ""
+msgstr "Måndag"
 
 #: plugins/clock/clock.c:59
 msgid "Tuesday"
-msgstr ""
+msgstr "Tisdag"
 
 #: plugins/clock/clock.c:60
 msgid "Wednesday"
-msgstr ""
+msgstr "Onsdag"
 
 #: plugins/clock/clock.c:61
 msgid "Thursday"
-msgstr ""
+msgstr "Torsdag"
 
 #: plugins/clock/clock.c:62
 msgid "Friday"
-msgstr ""
+msgstr "Fredag"
 
 #: plugins/clock/clock.c:63
 msgid "Saturday"
-msgstr ""
+msgstr "Lördag"
 
 #: plugins/clock/clock.c:67
 msgid "January"
-msgstr ""
+msgstr "Januari"
 
 #: plugins/clock/clock.c:68
 msgid "February"
-msgstr ""
+msgstr "Februari"
 
 #: plugins/clock/clock.c:69
 msgid "March"
-msgstr ""
+msgstr "Mars"
 
 #: plugins/clock/clock.c:70
 msgid "April"
@@ -378,19 +388,19 @@ msgstr ""
 
 #: plugins/clock/clock.c:71
 msgid "May"
-msgstr ""
+msgstr "Maj"
 
 #: plugins/clock/clock.c:72
 msgid "June"
-msgstr ""
+msgstr "Juni"
 
 #: plugins/clock/clock.c:73
 msgid "July"
-msgstr ""
+msgstr "Juli"
 
 #: plugins/clock/clock.c:74
 msgid "August"
-msgstr ""
+msgstr "Augusti"
 
 #: plugins/clock/clock.c:75
 msgid "September"
@@ -398,7 +408,7 @@ msgstr ""
 
 #: plugins/clock/clock.c:76
 msgid "October"
-msgstr ""
+msgstr "Oktober"
 
 #: plugins/clock/clock.c:77
 msgid "November"
@@ -410,7 +420,7 @@ msgstr ""
 
 #: plugins/clock/clock.c:350
 msgid "Clock type:"
-msgstr ""
+msgstr "Klocktyp:"
 
 #: plugins/clock/clock.c:363
 msgid "Analog"
@@ -426,15 +436,15 @@ msgstr ""
 
 #: plugins/clock/clock.c:433
 msgid "Hour mode:"
-msgstr ""
+msgstr "Timvisning:"
 
 #: plugins/clock/clock.c:440
 msgid "24 hour"
-msgstr ""
+msgstr "24-timmars"
 
 #: plugins/clock/clock.c:446
 msgid "12 hour"
-msgstr ""
+msgstr "12-timmars"
 
 #: plugins/clock/clock.c:452
 msgid "AM/PM"
@@ -442,19 +452,19 @@ msgstr ""
 
 #: plugins/clock/clock.c:490
 msgid "Show seconds:"
-msgstr ""
+msgstr "Visa sekunder:"
 
 #: plugins/clock/clock.c:599
 msgid "Xfce Clock"
-msgstr ""
+msgstr "XFce-klocka"
 
-#: plugins/pager/pager.c:271
+#: plugins/pager/pager.c:277
 msgid "Graphical pager"
-msgstr ""
+msgstr "Grafisk arbetsytehanterare"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr ""
+msgstr "Skrivbordsväxlare"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -462,46 +472,49 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
+"Tillgång till konfigurationssystemet har stängts av.\n"
+"\n"
+"Fråga din systemadministratör för mer information"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr ""
+msgstr "Lås skärmen"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Exit"
-msgstr ""
+msgstr "Avsluta"
 
 #: plugins/systembuttons/systembuttons.c:150
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Setup"
-msgstr ""
+msgstr "Inställningar"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Info"
-msgstr ""
+msgstr "Information"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr ""
+msgstr "Visa två knappar"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr ""
+msgstr "Lås"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
-msgstr ""
+msgstr "Knapp 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr ""
+msgstr "Knapp 2:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr ""
+msgstr "Systemknappar"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
@@ -509,20 +522,20 @@ msgstr ""
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
-msgstr ""
+msgstr "Postbox:"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr ""
+msgstr "Epostkommando:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr ""
+msgstr "Kommando attutföra när knappen på panelen klickas"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr ""
+msgstr "Intervall (sek):"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
-msgstr ""
+msgstr "Epostkontroll"
