Fix for a typo in "Lock" translation spotted by Lefungus (lefungus@altern.org)
(Old svn revision: 3895)

--- a/po/fr.po
+++ b/po/fr.po
@@ -175,7 +175,7 @@ msgstr "/_Aide"
 
 #: panel/panel.c:131
 msgid "/_Lock screen"
-msgstr "/_Vérouiller l'écran"
+msgstr "/_Verrouiller l'écran"
 
 #: panel/panel.c:132
 msgid "/E_xit"
@@ -479,7 +479,7 @@ msgstr ""
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr "Vérouiller l'écran"
+msgstr "Verrouiller l'écran"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
@@ -503,7 +503,7 @@ msgstr "Afficher deux boutons :"
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr "Vérouiller"
+msgstr "Verrouiller"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
