Update po files, just in case something changed ...
(Old svn revision: 3898)

--- a/po/cs.po
+++ b/po/cs.po
@@ -135,8 +135,8 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Váš window manager jak se zdá nepodporuje window manager hints jak "
-"je definováno na http://www.freedesktop.org. \n"
+"Váš window manager jak se zdá nepodporuje window manager hints jak je "
+"definováno na http://www.freedesktop.org. \n"
 "Některé z vlastností XFce nemusí fungovat jek bylo zamýšleno."
 
 #: panel/controls.c:320 panel/panel.c:123
