--- a/po/de.po
+++ b/po/de.po
@@ -1,13 +1,13 @@
 # Xfce4-panel German translation
 # Copyright (C) 2003 Olivier Fourdan
 # This file is distributed under the same license as the xfce4-panel package.
-# Moritz Heiber <moritz-heiber@arcor.de>, 2003
+# Moritz Heiber <moe@lunar-linux.org>, 2003
 msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-09-22 21:31+0200\n"
-"PO-Revision-Date: 2003-08-05 18:35+0200\n"
-"Last-Translator: Moritz Heiber <moritz-heiber@arcor.de>\n"
+"PO-Revision-Date: 2003-11-14 17:35+0200\n"
+"Last-Translator: Moritz Heiber <moe@lunar-linux.org>\n"
 "Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
@@ -437,7 +437,6 @@ msgid "Hour mode:"
 msgstr "Stundenmodus:"
 
 #: plugins/clock/clock.c:440
-#, fuzzy
 msgid "24 hour"
 msgstr "24 Std."
 
