--- a/po/cs.po
+++ b/po/cs.po
@@ -8,7 +8,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2003-11-05 17:25+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2003-15-11 HO:MI+ZONE\n"
 "Last-Translator: Lukas Konarovsky <daeltar@daeltar.org>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
@@ -59,7 +59,7 @@ msgstr "Příkaz:"
 
 #: panel/item_dialog.c:498 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "SPusť v _terminálu"
+msgstr "Spusť v _terminálu"
 
 #: panel/item_dialog.c:503 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
@@ -116,7 +116,7 @@ msgstr "Spoušteč"
 
 #: panel/main.c:115
 msgid "Are you sure you want to exit?"
-msgstr "Jste si jisti, že chcete exit?"
+msgstr "Jste si jisti, že chcete ukončit XFce?"
 
 #: panel/main.c:243
 #, c-format
@@ -202,7 +202,7 @@ msgstr "Nástroje"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr "hry"
+msgstr "Hry"
 
 #: panel/icons.c:78
 msgid "Help browser"
@@ -525,7 +525,7 @@ msgstr "Emailová schránka"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr "příkaz pro mail"
+msgstr "Příkaz pro mail"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
