Further cleanup: only create popup widgets when actually used. Start xfcalendar from the clock or send it a client message if already running
(Old svn revision: 3918)

--- a/AUTHORS
+++ b/AUTHORS
@@ -1,11 +1,13 @@
-Olivier Fourdan <fourdan@xfce.org>
 Jasper Huijsmans <huysmans@users.sourceforge.net>
+Olivier Fourdan <fourdan@xfce.org>
 Edscott Wilson Garcia <edscott@imp.mx>
 Biju Chacko <botsie@myrealbox.com>
-Jens Luedicke <jens@irs-net.com>
-Martin Loschwitz <madkiss@users.sourceforge.net>
-Xavier Maillard <zedek@fxgsproject.org>
-Michael Mosier <michael@spyonit.com>
-Erik Touve <etouve@earthlink.net>
 Benedikt Meurer <benedikt.meurer@unix-ag.uni-siegen.de>
 Bernhard Walle <Bernhard.Walle@gmx.de>
+Eduard Rocatello <master@spine-group.org>
+Erik Touve <etouve@earthlink.net>
+Jens Luedicke <jens@irs-net.com>
+Martin Loschwitz <madkiss@users.sourceforge.net>
+Michael Mosier <michael@spyonit.com>
+Oliver M. Bolzer <oliver@fakeroot.net>
+Xavier Maillard <zedek@fxgsproject.org>
