Update Polish translations
(Old svn revision: 3932)

--- a/po/pl.po
+++ b/po/pl.po
@@ -8,9 +8,9 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"PO-Revision-Date: 2003-12-26 19:23+0100\n"
 "Last-Translator: Paweł Pastuła <pastulap@poczta.onet.pl>\n"
-"Language-Team: LANGUAGE <LL@li.org>\n"
+"Language-Team: POLISH <LL@li.org>\n"
 "MIME-Version: 1.0\n"
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
@@ -26,7 +26,7 @@ msgstr "Zmień element"
 
 #: panel/controls_dialog.c:286 panel/item_dialog.c:681
 msgid "Position:"
-msgstr "Pozycja"
+msgstr "Pozycja:"
 
 #: panel/controls_dialog.c:342 panel/controls.c:272
 msgid ""
@@ -64,7 +64,7 @@ msgstr "Uruchom w _terminalu"
 
 #: panel/item_dialog.c:537 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "Powiadom o uruchomieniu"
+msgstr "Użyj powiadomienie o uruchomieniu"
 
 #: panel/item_dialog.c:564
 msgid "Caption:"
@@ -80,7 +80,7 @@ msgstr ""
 
 #: panel/item_dialog.c:640
 msgid "Attach menu to launcher"
-msgstr ""
+msgstr "Podłącz menu do launchera"
 
 #: panel/item_dialog.c:773
 msgid "Icon Preview"
@@ -88,7 +88,7 @@ msgstr "Podgląd iknony"
 
 #: panel/item_dialog.c:777
 msgid "Drag file onto this frame to change the icon"
-msgstr "Przeciągnij plik do tej ramki aby zmienić ikonę"
+msgstr "Przeciągnij plik na tą ramkę aby zmienić ikonę"
 
 #: panel/item_dialog.c:965
 msgid "Change menu item"
@@ -101,11 +101,11 @@ msgstr "_Usuń"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Naciśnij 3 klawisz myszy aby usunąć element"
+msgstr "Naciśnij 3 klawisz myszy aby zmienić element"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "Dodaj program"
+msgstr "Dodaj launcher"
 
 #: panel/item.c:469
 msgid "Add new item"
@@ -113,7 +113,7 @@ msgstr "Dodaj nowy element"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr "Program"
+msgstr ""
 
 #: panel/main.c:117
 msgid "Are you sure you want to exit?"
@@ -136,7 +136,7 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Twój menadżer okien nie obsługuje pewnych wskazówek menadżera okien "
+"Twój menadżer okien wydaje sie nie obsługiwać nowych wskazówek menadżera okien "
 "zefiniowanych na stronie: http://www.freedesktop.org. \n"
 "Niektóre funkcje XFce mogą nie działać jak powinny."
 
@@ -166,11 +166,11 @@ msgstr "/_O XFce"
 
 #: panel/panel.c:416
 msgid "/_Help"
-msgstr "/Pomoc"
+msgstr "/_Pomoc"
 
 #: panel/panel.c:419
 msgid "/_Settings manager"
-msgstr "/_Menadźer ustawień"
+msgstr "/_Menadżer ustawień"
 
 #: panel/panel.c:422
 msgid "/_Lock screen"
@@ -179,11 +179,11 @@ msgstr "/_Zablokuj ekran"
 #: panel/panel.c:423
 #, fuzzy
 msgid "/_Restart"
-msgstr "Z_amień"
+msgstr "/Z_restartuj"
 
 #: panel/panel.c:425
 msgid "/E_xit"
-msgstr "/W_yjście"
+msgstr "/_Wyjście"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
@@ -390,7 +390,7 @@ msgstr "12 godzinny"
 
 #: plugins/clock/clock.c:438
 msgid "AM/PM"
-msgstr "AM/PM"
+msgstr ""
 
 #: plugins/clock/clock.c:476
 msgid "Show seconds:"
@@ -472,7 +472,7 @@ msgstr "Polecenie poczty:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Polecenie do uruchomienia po naciśnieciu na przycisku panela"
+msgstr "Polecenie uruchomione po naciśnięciu na przycisku panela"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
