--- a/po/no.po
+++ b/po/no.po
@@ -1,31 +1,31 @@
-# translation of xfce4-panel.po to Turkish
+# SOME DESCRIPTIVE TITLE.
+# Copyright (C) YEAR THE PACKAGE'S COPYRIGHT HOLDER
 # This file is distributed under the same license as the PACKAGE package.
-# Copyright (C) 2003 THE PACKAGE'S COPYRIGHT HOLDER
-# Erçin EKER <erc.caldera@gmx.net>, 2003
+# FIRST AUTHOR <EMAIL@ADDRESS>, YEAR.
 #
+#, fuzzy
 msgid ""
 msgstr ""
-"Project-Id-Version: xfce4-panel\n"
-"Report-Msgid-Bugs-To: \n"
+"Project-Id-Version: PACKAGE VERSION\n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2003-12-13 20:08+0200\n"
-"Last-Translator: Erçin EKER <erc.caldera@gmx.net>\n"
-"Language-Team: Turkish <tr@li.org>\n"
+"PO-Revision-Date: YEAR-MO-DA HO:MI+ZONE\n"
+"Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
+"Language-Team: LANGUAGE <LL@li.org>\n"
 "MIME-Version: 1.0\n"
-"Content-Type: text/plain; charset=UTF-8\n"
-"Content-Transfer-Encoding: 8bit"
+"Content-Type: text/plain; charset=CHARSET\n"
+"Content-Transfer-Encoding: 8bit\n"
 
 #: panel/xfce_support.c:597
 msgid "Select file"
-msgstr "Dosya seç"
+msgstr "Velg fil"
 
 #: panel/controls_dialog.c:254
 msgid "Change item"
-msgstr "Nesneyi değiştir"
+msgstr "Endre element"
 
 #: panel/controls_dialog.c:286 panel/item_dialog.c:681
 msgid "Position:"
-msgstr "Konum:"
+msgstr "Posisjon:"
 
 #: panel/controls_dialog.c:342 panel/controls.c:272
 msgid ""
@@ -33,90 +33,90 @@ msgid ""
 "\n"
 "Do you want to remove the item?"
 msgstr ""
-"Bir bileşeni kaldırmak ona bağlı menüyüde etkiler.\n"
+"Fjerning av et element vil også fjerne dets popup meny.\n"
 "\n"
-"Yinede bileşeni kaldırmak istiyor musunuz?"
+"Vil du fjerne elementet?"
 
 #: panel/item_dialog.c:321
 msgid "Other Icon"
-msgstr "Diğer Simge"
+msgstr "Annet ikon"
 
 #: panel/item_dialog.c:346
 msgid "Select icon"
-msgstr "Simge seçin"
+msgstr "Velg ikon"
 
 #: panel/item_dialog.c:396
 msgid "Icon:"
-msgstr "Simge:"
+msgstr "Ikon:"
 
 #: panel/item_dialog.c:467
 msgid "Select command"
-msgstr "Komut seç"
+msgstr "Velg kommando"
 
 #: panel/item_dialog.c:495
 msgid "Command:"
-msgstr "Komut:"
+msgstr "Kommando:"
 
 #: panel/item_dialog.c:532 plugins/mailcheck/mailcheck.c:668
 msgid "Run in _terminal"
-msgstr "_Terminalde çalıştır"
+msgstr "Kjør i _terminal"
 
 #: panel/item_dialog.c:537 plugins/mailcheck/mailcheck.c:676
 msgid "Use startup _notification"
-msgstr "Başlangıç _uyarısı kullan"
+msgstr "Bruk oppstarts _varsel"
 
 #: panel/item_dialog.c:564
 msgid "Caption:"
-msgstr "Başlık:"
+msgstr "Bildetekst:"
 
 #: panel/item_dialog.c:597
 msgid "Tooltip:"
-msgstr "İpucu:"
+msgstr "Verktøytips:"
 
 #: panel/item_dialog.c:633
 msgid "Menu:"
-msgstr "Menü:"
+msgstr "Meny:"
 
 #: panel/item_dialog.c:640
 msgid "Attach menu to launcher"
-msgstr "Başlatıcıya menü ekle"
+msgstr "Fest meny til programstarter"
 
 #: panel/item_dialog.c:773
 msgid "Icon Preview"
-msgstr "Simge Önizlemesi"
+msgstr "Ikon forhåndsvisning"
 
 #: panel/item_dialog.c:777
 msgid "Drag file onto this frame to change the icon"
-msgstr "Simgeyi değiştirmek için bu pencereye bir dosya sürükleyin"
+msgstr "Dra filen på denne rammen for å forandre ikonet"
 
 #: panel/item_dialog.c:965
 msgid "Change menu item"
-msgstr "Menü nesnesini değiştir"
+msgstr "Endre meny element"
 
 #. add buttons
 #: panel/item_dialog.c:968
 msgid "Remove"
-msgstr "Kaldır"
+msgstr "Fjern"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Nesneyi değiştirmek için farenin 3. tuşuna basın"
+msgstr "Klikk tredje museknapp for å forandre element"
 
 #: panel/item.c:464
 msgid "Add launcher"
-msgstr "Başlatıcı ekle"
+msgstr "Legg til programstarter"
 
 #: panel/item.c:469
 msgid "Add new item"
-msgstr "Yeni nesne ekle"
+msgstr "Tilføy nytt element"
 
 #: panel/item.c:601
 msgid "Launcher"
-msgstr "Başlatıcı"
+msgstr "Programstarter"
 
 #: panel/main.c:117
 msgid "Are you sure you want to exit?"
-msgstr "Çıkmak istediğinizden emin misiniz?"
+msgstr "Er du sikker på at du vil avslutte?"
 
 #: panel/main.c:329
 #, c-format
@@ -125,8 +125,8 @@ msgid ""
 "Part of the XFce Desktop Environment\n"
 "http://www.xfce.org\n"
 msgstr ""
-"%s, sürüm %s\n"
-"XFce Masaüstü Ortamının bir bileşeni\n"
+"%s, versjon %s\n"
+"Del av XFce skrivebordsmiljøet\n"
 "http://www.xfce.org\n"
 
 #: panel/main.c:361
@@ -135,106 +135,106 @@ msgid ""
 "defined on http://www.freedesktop.org. \n"
 "Some XFce features may not work as intended."
 msgstr ""
-"Kullandığınız pencere yöneticisi http://www.freedesktop.org' ta belirtilen "
-"ipuçlarını desteklemiyor görünüyor. \n"
-"Bazı XFce özellikleri çalışmayabilir."
+"Vinduhåndtereren din ser ikke ut til å støtte de vinduhånteringshintene som er "
+"definert av http://www.freedesktop.org. \n"
+"Noen XFce egenskaper virker kanskje ikke som påtenkt."
 
 #: panel/controls.c:320 panel/panel.c:412
 msgid "/Add _new item"
-msgstr "/Yeni nesne _ekle"
+msgstr "/Legg til _nytt element"
 
 #: panel/controls.c:322 panel/panel.c:414
 msgid "/_Properties..."
-msgstr "/_Özellikler..."
+msgstr "/_Egenskaper.."
 
 #: panel/controls.c:323
 msgid "/_Remove"
-msgstr "/_Kaldır"
+msgstr "/_Fjern"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr "Bu nesne ayarlanabilir seçenek sunmuyor"
+msgstr "Dette elementet har konfigurasjons alternativer"
 
 #: panel/panel.c:410
 msgid "/XFce Panel"
-msgstr "/XFce Paneli"
+msgstr "/XFce Panel"
 
 #: panel/panel.c:415
 msgid "/_About XFce"
-msgstr "/XFce _Hakkında"
+msgstr "/_Om XFce"
 
 #: panel/panel.c:416
 msgid "/_Help"
-msgstr "/_Yardım"
+msgstr "/_Hjelp"
 
 #: panel/panel.c:419
 msgid "/_Settings manager"
-msgstr "/_Ayar yöneticisi"
+msgstr "/_Instillings håndterer"
 
 #: panel/panel.c:422
 msgid "/_Lock screen"
-msgstr "/Ekranı _kilitle"
+msgstr "/_Lås skjerm"
 
 #: panel/panel.c:423
 msgid "/_Restart"
-msgstr "/_Yeniden Başlat"
+msgstr "/_Omstart"
 
 #: panel/panel.c:425
 msgid "/E_xit"
-msgstr "/_Çık"
+msgstr "/A_vslutt"
 
 #: panel/panel.c:812 settings/xfce_settings_plugin.c:82
 #: settings/xfce_settings_dialog.c:649
 msgid "XFce Panel"
-msgstr "XFce Paneli"
+msgstr "XFce Panel"
 
 #: panel/icons.c:73
 msgid "Default"
-msgstr "Öntanımlı"
+msgstr "Standard"
 
 #: panel/icons.c:74
 msgid "Editor"
-msgstr "Düzenleyici"
+msgstr "Redigerer"
 
 #: panel/icons.c:75
 msgid "File management"
-msgstr "Dosya yönetimi"
+msgstr "Fil administrasjon"
 
 #: panel/icons.c:76
 msgid "Utilities"
-msgstr "Araçlar"
+msgstr "Verktøyer"
 
 #: panel/icons.c:77
 msgid "Games"
-msgstr "Oyunlar"
+msgstr "Spill"
 
 #: panel/icons.c:78
 msgid "Help browser"
-msgstr "Yardım Merkezi"
+msgstr "Hjelpeveileder"
 
 #: panel/icons.c:79
 msgid "Multimedia"
-msgstr "Çoklu Ortam"
+msgstr "Multimedia"
 
 #: panel/icons.c:80
 msgid "Network"
-msgstr "Ağ"
+msgstr "Nettverk"
 
 #: panel/icons.c:81
 msgid "Graphics"
-msgstr "Grafik"
+msgstr "Grafikk"
 
 #: panel/icons.c:82
 msgid "Printer"
-msgstr "Yazıcı"
+msgstr "Printer"
 
 #: panel/icons.c:83
 msgid "Productivity"
-msgstr "Üretkenlik"
+msgstr "Produktivitet"
 
 #: panel/icons.c:84
 msgid "Sound"
-msgstr "Ses"
+msgstr "Lyd"
 
 #: panel/icons.c:85
 msgid "Terminal"
@@ -242,73 +242,73 @@ msgstr "Terminal"
 
 #: panel/mcs_client.c:208
 msgid "Settings manager not available"
-msgstr "Ayar yöneticisi kullanılamıyor"
+msgstr "Instilligns håndterer ikke tilgjengelig"
 
 #: panel/popup.c:261
 msgid "Menu"
-msgstr "Menü"
+msgstr "Meny"
 
 #: settings/xfce_settings_dialog.c:119
 msgid "Tiny"
-msgstr "İnce"
+msgstr "Knøttliten"
 
 #: settings/xfce_settings_dialog.c:123
 msgid "Small"
-msgstr "Küçük"
+msgstr "Liten"
 
 #: settings/xfce_settings_dialog.c:127
 msgid "Medium"
-msgstr "Orta"
+msgstr "Medium"
 
 #: settings/xfce_settings_dialog.c:131
 msgid "Large"
-msgstr "Büyük"
+msgstr "Stor"
 
 #: settings/xfce_settings_dialog.c:190
 msgid "Horizontal"
-msgstr "Yatay"
+msgstr "Horisontal"
 
 #: settings/xfce_settings_dialog.c:194
 msgid "Vertical"
-msgstr "Dikey"
+msgstr "Vertikal"
 
 #: settings/xfce_settings_dialog.c:226 settings/xfce_settings_dialog.c:456
 msgid "Left"
-msgstr "Sol"
+msgstr "Venstre"
 
 #: settings/xfce_settings_dialog.c:230 settings/xfce_settings_dialog.c:457
 msgid "Right"
-msgstr "Sağ"
+msgstr "Høyre"
 
 #: settings/xfce_settings_dialog.c:234 settings/xfce_settings_dialog.c:455
 #: settings/xfce_settings_dialog.c:511
 msgid "Top"
-msgstr "Üst"
+msgstr "Topp"
 
 #: settings/xfce_settings_dialog.c:238 settings/xfce_settings_dialog.c:454
 #: settings/xfce_settings_dialog.c:519
 msgid "Bottom"
-msgstr "Alt"
+msgstr "Bunn"
 
 #: settings/xfce_settings_dialog.c:374
 msgid "Panel size:"
-msgstr "Panel boyutu:"
+msgstr "Panel størrelse :"
 
 #: settings/xfce_settings_dialog.c:390
 msgid "Panel orientation:"
-msgstr "Panel yönelimi:"
+msgstr "Panel orientering:"
 
 #: settings/xfce_settings_dialog.c:407
 msgid "Popup position:"
-msgstr "Popup konumu:"
+msgstr "Sprettopp posisjon:"
 
 #: settings/xfce_settings_dialog.c:424
 msgid "Icon theme:"
-msgstr "Simge teması:"
+msgstr "Ikon tema:"
 
 #: settings/xfce_settings_dialog.c:495
 msgid "Panel layer:"
-msgstr "Panel katmanı:"
+msgstr "Panel lag:"
 
 #: settings/xfce_settings_dialog.c:515
 msgid "Normal"
@@ -316,34 +316,34 @@ msgstr "Normal"
 
 #: settings/xfce_settings_dialog.c:535
 msgid "Center the panel:"
-msgstr "Paneli ortala:"
+msgstr "Sentrer panelet:"
 
 #: settings/xfce_settings_dialog.c:559
 msgid "Set"
-msgstr "Uygula"
+msgstr "Sett"
 
 #: settings/xfce_settings_dialog.c:595
 msgid "Autohide:"
-msgstr "Otomatik Gizleme:"
+msgstr "Autogjem:"
 
 #: settings/xfce_settings_dialog.c:663
 msgid "XFce Panel Settings"
-msgstr "XFce Panel Ayarları"
+msgstr "XFce panel instillinger"
 
 #. Appearance
 #: settings/xfce_settings_dialog.c:675
 msgid "Appearance"
-msgstr "Görünüm"
+msgstr "Utseende"
 
 #. Position
 #: settings/xfce_settings_dialog.c:696
 msgid "Position"
-msgstr "Konum"
+msgstr "Posisjon"
 
 #. autohide
 #: settings/xfce_settings_dialog.c:712
 msgid "Behaviour"
-msgstr "Davranış"
+msgstr "Oppførsel"
 
 #. Use format characters from strftime(3)
 #. * to get the proper string for your locale.
@@ -355,11 +355,11 @@ msgstr "Davranış"
 #.
 #: plugins/clock/clock.c:119
 msgid "%A, %-d %B %Y"
-msgstr "%A,·%-d·%B·%Y"
+msgstr "%A, %-d %B %Y"
 
 #: plugins/clock/clock.c:336
 msgid "Clock type:"
-msgstr "Saat türü:"
+msgstr "Klokke type:"
 
 #: plugins/clock/clock.c:349
 msgid "Analog"
@@ -367,7 +367,7 @@ msgstr "Analog"
 
 #: plugins/clock/clock.c:353
 msgid "Digital"
-msgstr "Sayısal"
+msgstr "Digital"
 
 #: plugins/clock/clock.c:357
 msgid "LED"
@@ -375,35 +375,35 @@ msgstr "LED"
 
 #: plugins/clock/clock.c:419
 msgid "Hour mode:"
-msgstr "Saat biçimi:"
+msgstr "Time modus:"
 
 #: plugins/clock/clock.c:426
 msgid "24 hour"
-msgstr "24 saat"
+msgstr "24 timer"
 
 #: plugins/clock/clock.c:432
 msgid "12 hour"
-msgstr "12 saat"
+msgstr "12 timer"
 
 #: plugins/clock/clock.c:438
 msgid "AM/PM"
-msgstr "ÖÖ/ÖS"
+msgstr "AM/PM"
 
 #: plugins/clock/clock.c:476
 msgid "Show seconds:"
-msgstr "Saniyeyi göster:"
+msgstr "Vis sekunder:"
 
 #: plugins/clock/clock.c:585
 msgid "Xfce Clock"
-msgstr "Xfce Saati"
+msgstr "Xfce klokke"
 
 #: plugins/pager/pager.c:271
 msgid "Graphical pager"
-msgstr "Grafik sayfalayıcı"
+msgstr "Grafisk skrivebordsoversikt"
 
 #: plugins/switcher/switcher.c:696
 msgid "Desktop switcher"
-msgstr "Masaüstü değiştirici"
+msgstr "Skrivebordsbytter"
 
 #: plugins/systembuttons/systembuttons.c:60
 msgid ""
@@ -411,127 +411,70 @@ msgid ""
 "\n"
 "Ask your system administrator for more information"
 msgstr ""
-"Yapılandırma sistemine erişim iptal edilmiş.\n"
+"Adgang til konfigurasjons systemet har blitt deaktivert.\n"
 "\n"
-"Daha fazla bilgi için sistem yöneticinize baş vurun"
+"Ta kontakt med din system administrator for mer informasjon"
 
 #: plugins/systembuttons/systembuttons.c:148
 msgid "Lock the screen"
-msgstr "Ekranı kilitle"
+msgstr "Lås skjermen"
 
 #: plugins/systembuttons/systembuttons.c:149
 #: plugins/systembuttons/systembuttons.c:518
 msgid "Exit"
-msgstr "Çıkış"
+msgstr "Avslutt"
 
 #: plugins/systembuttons/systembuttons.c:150
 #: plugins/systembuttons/systembuttons.c:519
 msgid "Setup"
-msgstr "Ayarlar"
+msgstr "Oppsett"
 
 #: plugins/systembuttons/systembuttons.c:151
 #: plugins/systembuttons/systembuttons.c:520
 msgid "Info"
-msgstr "Bilgi"
+msgstr "Info"
 
 #: plugins/systembuttons/systembuttons.c:500
 msgid "Show two buttons:"
-msgstr "İki düğme göster:"
+msgstr "Vis to knapper:"
 
 #. set names to use in option menus
 #: plugins/systembuttons/systembuttons.c:517
 msgid "Lock"
-msgstr "Kilitle"
+msgstr "Lås"
 
 #: plugins/systembuttons/systembuttons.c:549
 msgid "Button 1:"
-msgstr "Düğme 1:"
+msgstr "Knapp 1:"
 
 #: plugins/systembuttons/systembuttons.c:565
 msgid "Button 2:"
-msgstr "Düğme 2:"
+msgstr "Knapp 2:"
 
 #: plugins/systembuttons/systembuttons.c:600
 msgid "System buttons"
-msgstr "Sistem düğmeleri"
+msgstr "System knapper"
 
 #: plugins/separator/separator.c:153
 msgid "Separator"
-msgstr "Ayırıcı"
+msgstr "Skiller"
 
 #: plugins/mailcheck/mailcheck.c:539
 msgid "Mail box:"
-msgstr "Posta kutusu:"
+msgstr "E-mail innboks:"
 
 #: plugins/mailcheck/mailcheck.c:623
 msgid "Mail command:"
-msgstr "Posta komutu:"
+msgstr "E-post kommando:"
 
 #: plugins/mailcheck/mailcheck.c:637
 msgid "Command to run when the button on the panel is clicked"
-msgstr "Paneldeki düğmeye tıklandığında çalıştırılacak komut"
+msgstr "Kommando som kjøres når knappen på panelet blir klikket"
 
 #: plugins/mailcheck/mailcheck.c:706
 msgid "Interval (sec):"
-msgstr "Gecikme (sn):"
+msgstr "Intervall (sek):"
 
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
-msgstr "Posta denetimi"
-
-#~ msgid "Sunday"
-#~ msgstr "Pazar"
-
-#~ msgid "Monday"
-#~ msgstr "Pazartesi"
-
-#~ msgid "Tuesday"
-#~ msgstr "Salı"
-
-#~ msgid "Wednesday"
-#~ msgstr "Çarşamba"
-
-#~ msgid "Thursday"
-#~ msgstr "Perşembe"
-
-#~ msgid "Friday"
-#~ msgstr "Cuma"
-
-#~ msgid "Saturday"
-#~ msgstr "Cumartesi"
-
-#~ msgid "January"
-#~ msgstr "Ocak"
-
-#~ msgid "February"
-#~ msgstr "Şubat"
-
-#~ msgid "March"
-#~ msgstr "Mart"
-
-#~ msgid "April"
-#~ msgstr "Nisan"
-
-#~ msgid "May"
-#~ msgstr "Mayıs"
-
-#~ msgid "June"
-#~ msgstr "Haziran"
-
-#~ msgid "July"
-#~ msgstr "Temmuz"
-
-#~ msgid "August"
-#~ msgstr "Ağustos"
-
-#~ msgid "September"
-#~ msgstr "Eylül"
-
-#~ msgid "October"
-#~ msgstr "Ekim"
-
-#~ msgid "November"
-#~ msgstr "Kasım"
-
-#~ msgid "December"
-#~ msgstr "Aralık"
+msgstr "E-post sjekk"
