I'm poor lonely and all alone. Thats why I'm doing translations at 7 past twelve during the night.
(Old svn revision: 3950)

--- a/po/de.po
+++ b/po/de.po
@@ -6,7 +6,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: xfce4-panel 1.0.0\n"
 "POT-Creation-Date: 2003-12-04 09:37+0100\n"
-"PO-Revision-Date: 2003-11-14 17:35+0200\n"
+"PO-Revision-Date: 2004-01-08 00:05+0100\n"
 "Last-Translator: Moritz Heiber <moe@lunar-linux.org>\n"
 "Language-Team: none <none@none>\n"
 "MIME-Version: 1.0\n"
@@ -99,7 +99,7 @@ msgstr "Entfernen"
 
 #: panel/item.c:441
 msgid "Click mouse button 3 to change item"
-msgstr "Maustaste 3 zum Verändern des Objekts benutzen"
+msgstr "Maustaste 3 zum Verändern benutzen"
 
 #: panel/item.c:464
 msgid "Add launcher"
@@ -152,7 +152,7 @@ msgstr "/_Entfernen"
 
 #: panel/controls.c:655
 msgid "This item has no configuration options"
-msgstr "Dieses Objekt hat keine Konfigurationsoptionen"
+msgstr "Dieses Objekt hat keine Optionen"
 
 #: panel/panel.c:410
 msgid "/XFce Panel"
@@ -354,7 +354,7 @@ msgstr "Verhalten"
 #.
 #: plugins/clock/clock.c:119
 msgid "%A, %-d %B %Y"
-msgstr ""
+msgstr "%A, %-d %B %Y"
 
 #: plugins/clock/clock.c:336
 msgid "Clock type:"
@@ -477,60 +477,3 @@ msgstr "Intervall (Sek.):"
 #: plugins/mailcheck/mailcheck.c:778
 msgid "Mail check"
 msgstr "Mailcheck"
-
-#~ msgid "Sunday"
-#~ msgstr "Sonntag"
-
-#~ msgid "Monday"
-#~ msgstr "Montag"
-
-#~ msgid "Tuesday"
-#~ msgstr "Dienstag"
-
-#~ msgid "Wednesday"
-#~ msgstr "Mittwoch"
-
-#~ msgid "Thursday"
-#~ msgstr "Donnerstag"
-
-#~ msgid "Friday"
-#~ msgstr "Freitag"
-
-#~ msgid "Saturday"
-#~ msgstr "Samstag"
-
-#~ msgid "January"
-#~ msgstr "Januar"
-
-#~ msgid "February"
-#~ msgstr "Februar"
-
-#~ msgid "March"
-#~ msgstr "März"
-
-#~ msgid "April"
-#~ msgstr "April"
-
-#~ msgid "May"
-#~ msgstr "Mai"
-
-#~ msgid "June"
-#~ msgstr "Juni"
-
-#~ msgid "July"
-#~ msgstr "Juli"
-
-#~ msgid "August"
-#~ msgstr "August"
-
-#~ msgid "September"
-#~ msgstr "September"
-
-#~ msgid "October"
-#~ msgstr "Oktober"
-
-#~ msgid "November"
-#~ msgstr "November"
-
-#~ msgid "December"
-#~ msgstr "Dezember"
