General clean-ups. First step to prettier property dialogs.
(Old svn revision: 3951)

--- a/NEWS
+++ b/NEWS
@@ -1,5 +1,26 @@
 Noteworthy updates to the xfce4 panel should be recorded here.
 
+* 2003-01-07  Jasper Huijsmans <jasper@moongroup.com>
+
+Implement module unloading. Add uniqueness setting to plugins.
+
+* 2003-12-15  Olivier Fourdan <fourdan@xfce.org>
+
+Add pop3 email checking: Use 'pop3://username:password@host' as mailbox.
+
+* 2003-12-03  Jasper Huijsmans <jasper@moongroup.com>
+
+Properly update arrow direction. Use this info to position the menus. Much
+better.
+
+* 2003-11-07  Jasper Huijsmans <jasper@moongroup.com>
+
+French documentation. Awesome.
+
+* 2003-10-25  Jasper Huijsmans <jasper@moongroup.com>
+
+Add xrandr awareness.
+
 * 2003-10-10  Jasper Huijsmans <jasper@moongroup.com>
 
 Add xinerama aware smart positioning. Keeps panel inside the screen and, if it
